<resources>
    <string name="app_name">Inspire Learn</string>

    // signup strings
    <string name="sign_up">Sign Up</string>
    <string name="first">You are an Inspiration!</string>
    <string name="second">JOIN THE COMMUNITY</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>

    <string name="location">Location</string>
    <string name="next">NEXT</string>
    <string name="almostDone">Almost done!</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>

    <string name="number">Phone number</string>
    <string name="welcome">Welcome</string>
    <string name="done">Done</string>
    <string name="why">Why are you joining</string>
    <string name="done2">DONE</string>

    <string name="inspireTab">Inspire Tab</string>
    <string name="learning">Learning</string>
    <string name="profile">Profile</string>
    <string name="student">Wezzie</string>
    <string name="modules">Modules</string>

    <string name="moduleGreeting">Hey Wezzie, your modules will display here. Click the bottom right key to get started.</string>
    <string name="discover">Discover</string>

</resources>
