<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingScreen">

    <Button
        android:id="@+id/progress2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle"
        android:layout_marginStart="180dp"/>

    <Button
        android:id="@+id/progress"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/progress" />

    <Button
        android:id="@+id/progress3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="270dp"
        android:background="@drawable/circle" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@id/progress"
        android:layout_marginTop="6dp"
        android:text="@string/welcome"
        android:textColor="#ef6d22"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="60dp"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_below="@id/progress"
        android:layout_marginTop="6dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="163dp"/>

    <TextView
        android:id="@+id/done"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/progress"
        android:layout_marginTop="6dp"
        android:text="@string/done"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="263dp"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="0.5dp"
        android:layout_below="@id/done"
        android:background="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/Image"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:src="@drawable/homebuttons"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <ImageView
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:src="@drawable/options"
        android:layout_below="@id/Image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/info"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:src="@drawable/options"
        android:layout_below="@id/name"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"/>

    <RelativeLayout
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info">

        <ImageView
            android:id="@+id/one"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/two"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/circle"
            android:layout_toEndOf="@id/one"
            android:layout_marginStart="10dp" />

        <ImageView
            android:layout_toEndOf="@id/two"
            android:id="@+id/three"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/circle"
            android:layout_marginStart="10dp" />

        <ImageView
            android:layout_toEndOf="@id/three"
            android:id="@+id/four"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/circle"
            android:layout_marginStart="10dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/next"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_below="@id/welcome"
        android:layout_marginStart="280dp"
        android:layout_marginTop="520dp"
        android:text="@string/next"
        android:textColor="#ef6d22"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>